adjust scripts for thinkpad

--- a/home/.config/hypr/hyprland.conf
+++ b/home/.config/hypr/hyprland.conf
@@ -34,27 +34,21 @@ general { # https://wiki.hyprland.org/Configuring/Variables/#general
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#input
+# hyprctl -j devices | jq '.keyboards[] | {name,xkb_active_layout_name,xkb_layout_names}'
 input {
   follow_mouse = 1
   # float_switch_override_focus = 0
 	resolve_binds_by_sym = true
 
-  kb_model   = apple
   kb_layout  = us,ru
-  kb_options = grp:win_space_toggle,ctrl:nocaps
-  # kb_variant =
-  # kb_model =
-  # kb_rules =
 
-  # debug:
-  # hyprctl -j devices | jq '.keyboards[] | {name,xkb_active_layout_name,xkb_layout_names}'
+  # kb_options = ctrl:swapcaps,ctrl:nocaps,grp:win_space_toggle,ctrl:nocaps,altwin:swap_lalt_lwin
+  # kb_options = ctrl:swapcaps,ctrl:nocaps,grp:win_space_toggle
 
-  kb_options = ctrl:swapcaps,grp:win_space_toggle
-
-  sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
+  sensitivity = 0
 
   touchpad {
-    natural_scroll = false
+    natural_scroll = true
   }
 }
 
