--- a/home/.config/hypr/modules/autostart.conf
+++ b/home/.config/hypr/modules/autostart.conf
@@ -1,18 +1,15 @@
-# Autostart necessary processes (like notifications daemons, status bars, etc.)
-# Or execute your favorite apps at launch like this:
-
 # exec-once = systemctl --user start hyprpolkitagent
+# exec-once = systemctl --user start hypridle
 
-# Services
-# exec-once = systemctl --user start hypridle
-# exec-once = systemctl --user start hypridle
 exec-once = dunst
 exec-once = /run/current-system/sw/libexec/polkit-kde-authentication-agent-1
 exec-once = pkill -x swww-daemon; swww-daemon & disown
 exec-once = kbuildsycoca6 # dolphin file association
 exec-once = kanshi reload
 # exec-once = hypridle
-exec-once = $HOME/.config/scripts/mount-drives
+
+exec = $HOME/.local/bin/public/hyprland/set-keyboard-layout
+exec-once = $HOME/.local/bin/public/hardware/mount-drives
 exec-once = $HOME/.config/waybar/live-reload
 
 # https://wiki.hypr.land/Useful-Utilities/Clipboard-Managers/
