--- a/home/.config/hypr/modules/binds.conf
+++ b/home/.config/hypr/modules/binds.conf
@@ -1,4 +1,4 @@
-# Example binds, see https://wiki.hyprland.org/Configuring/Binds
+# https://wiki.hyprland.org/Configuring/Binds
 
 # Applications
 bind = SUPER, Return,   exec, kitty
@@ -8,19 +8,17 @@ bind = SUPER, I,        exec, $HOME/.local/bin/public/wallpaper/picker
 bind = SUPER, D,        exec, "$HOME/.local/bin/public/menu/launch-kitty" applications
 bind = SUPER, P,        exec, "$HOME/.local/bin/public/menu/launch-kitty"
 
+# System
 bind = SUPER, SPACE,      exec, bash -c 'hyprctl switchxkblayout keyb next; pkill -RTMIN+6 waybar'
 bind = SUPER, MINUS,      exec, $HOME/.local/bin/public/wallpaper/set-ink
 
-# There is a problem with bluetooth ocnnection that crashes system on this hotkey use uwsm app
-# https://wiki.hypr.land/Useful-Utilities/Systemd-start/
 bind = SUPER, backslash,  exec, uwsm app -- $HOME/.local/bin/public/bluetooth-connect-xm6
-
 bind = SUPER, slash,        exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
 bind = SUPER, bracketLeft,  exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 3%-
 bind = SUPER, bracketRight, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 3%+
 
-bindl = , F1,  exec, $HOME/.local/bin/public/set_brightness down 3
-bindl = , F2,  exec, $HOME/.local/bin/public/set_brightness up 3
+bindl = , F1,  exec, $HOME/.local/bin/public/hardware/set-monitor-brightness down 3
+bindl = , F2,  exec, $HOME/.local/bin/public/hardware/set-monitor-brightness up 3
 bindl = , F6,  exec, hyprlock
 bindl = , F5,  exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
 bindl = , F7,  exec, playerctl previous
@@ -30,7 +28,7 @@ bindl = , F10, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
 bindl = , F11, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 2%-
 bindl = , F12, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 2%+
 
-# Plugins
+bindl = SUPER SHIFT, b, exec, $HOME/.local/bin/public/hardware/set-keyboard-backlight
 # bind = SUPER, K, shadeactivewindow, invert
 
 # Workspaces
