reorg waybar config

--- a/home/.config/waybar/config.jsonc
+++ b/home/.config/waybar/config.jsonc
@@ -10,28 +10,27 @@
     "modules-left": [
       "custom/logo",
       "hyprland/workspaces#main",
-      "custom/weather-eink",
-      "custom/surf",
+			"group/status_group",
       // "hyprland/workspaces#app_tray",
-      "hyprland/submap"
+      "hyprland/submap",
+      "custom/mic_used_by_app",
     ],
-    "modules-center": [ ],
+    "modules-center": [
+      "group/weather_group",
+      "group/system_group",
+		],
     "modules-right": [
       "tray",
-      "custom/podman",
-      "custom/openvpn",
-      "custom/veracrypt",
-      "temperature",
-      "group/audio",
-      "custom/mic_used_by_app",
-      "battery",
       "custom/language",
+      "temperature",
       "custom/date_neuro",
       "custom/date_month",
-      "custom/date_time"
+      "custom/date_time",
     ],
     "include": [
-      "~/.config/waybar/modules.jsonc",
+      "~/.config/waybar/modules/custom.jsonc",
+      "~/.config/waybar/modules/groups.jsonc",
+      "~/.config/waybar/modules/default.jsonc",
       "~/.config/waybar/generated_by_scripts/hyprland_workspaces.jsonc"
     ]
   },
@@ -46,34 +45,32 @@
     "modules-left": [
       "custom/logo",
       "hyprland/workspaces#main",
-      "custom/weather",
-      "custom/surf",
-      "hyprland/submap"
+			"group/status_group",
+      // "hyprland/workspaces#app_tray",
+      "hyprland/submap",
+      "custom/mic_used_by_app",
     ],
-    "modules-center": [ ],
+    "modules-center": [
+      "group/weather_group",
+      "group/system_group",
+		],
     "modules-right": [
       "tray",
-      "custom/podman",
-      "custom/openvpn",
-      "custom/veracrypt",
-      "temperature",
-      "group/audio",
-      "custom/mic_used_by_app",
-      "battery",
-      // it is not working properly
-      // "hyprland/language",
       "custom/language",
+      "temperature",
       "custom/date_neuro",
       "custom/date_month",
-      "custom/date_time"
+      "custom/date_time",
     ],
     "include": [
-      "~/.config/waybar/modules.jsonc",
+      "~/.config/waybar/modules/custom.jsonc",
+      "~/.config/waybar/modules/groups.jsonc",
+      "~/.config/waybar/modules/default.jsonc",
       "~/.config/waybar/generated_by_scripts/hyprland_workspaces.jsonc"
     ]
   },
   {
-    "name": "eink",
+    "name": "thinkpad",
     "output": ["eDP-1"],
     // "height": 20,
     "spacing": 5,
@@ -83,29 +80,27 @@
     "modules-left": [
       "custom/logo",
       "hyprland/workspaces#main",
-      "custom/weather-eink",
-      "custom/surf",
+			"group/status_group",
       // "hyprland/workspaces#app_tray",
-      "hyprland/submap"
+      "hyprland/submap",
+      "custom/mic_used_by_app",
     ],
-    "modules-center": [ ],
+    "modules-center": [
+      "group/weather_group",
+      "group/system_group",
+		],
     "modules-right": [
       "tray",
-      "custom/podman",
-      "custom/openvpn",
-      "custom/veracrypt",
-      "temperature",
-      "group/audio",
-      "custom/mic_used_by_app",
       "custom/language",
-      "network",
+      "temperature",
       "custom/date_neuro",
       "custom/date_month",
       "custom/date_time",
-      "battery",
     ],
     "include": [
-      "~/.config/waybar/modules.jsonc",
+      "~/.config/waybar/modules/custom.jsonc",
+      "~/.config/waybar/modules/groups.jsonc",
+      "~/.config/waybar/modules/default.jsonc",
       "~/.config/waybar/generated_by_scripts/hyprland_workspaces.jsonc"
     ]
   },
