reorg waybar, split configs

--- a/home/.config/waybar/hosts/homepc.jsonc
+++ b/home/.config/waybar/hosts/homepc.jsonc
@@ -1,7 +1,7 @@
 [
   {
     "name": "eink",
-    "output": ["HDMI-A-1"],
+    "output": ["HDMI-A-1", "DP-1"],
     // "height": 20,
     "spacing": 5,
     "layer": "top",
@@ -36,7 +36,7 @@
   },
   {
     "name": "big",
-    "output": ["DP-1"],
+    "output": ["DP-2"],
     "height": 38,
     "spacing": 12,
     "layer": "top",
