hyprlock, hypridle functionality

--- a/home/.config/hypr/modules/autostart.conf
+++ b/home/.config/hypr/modules/autostart.conf
@@ -9,6 +9,7 @@ exec-once = kanshi reload
 # exec-once = hypridle
 
 exec = $HOME/.local/bin/public/hyprland/set-keyboard-layout
+exec = $HOME/.local/bin/public/hyprland/set-thinkpad-settings
 exec-once = $HOME/.local/bin/public/hardware/mount-drives
 exec-once = $HOME/.config/waybar/live-reload
 
@@ -19,11 +20,6 @@ exec-once = wl-paste --type image --watch cliphist store # Stores only image dat
 # exec-once = $HOME/.local/bin/public/kitty-background-listener
 
 # Scripts
-exec-once = $HOME/.local/bin/public/tmux/nix-session
-exec-once = $HOME/.local/bin/public/tmux/local-session
-exec-once = $HOME/.local/bin/public/tmux/obsidian-session
-exec-once = $HOME/.local/bin/public/tmux/todo-session
-exec-once = $HOME/.local/bin/private/tmux/openvpn-session
 # exec-once = uwsm app -- $HOME/.config/scripts/bluetooth-startup-connect
 
 # Applications
