--- a/home/.config/hypr/hypridle.conf
+++ b/home/.config/hypr/hypridle.conf
@@ -1,21 +1,11 @@
-general {
-  lock_cmd = pidof hyprlock || hyprlock
-  before_sleep_cmd = loginctl lock-session
-  after_sleep_cmd = hyprctl dispatch dpms on
+listener {
+  timeout = 150
+  on-timeout = hyprctl dispatch dpms off
+  on-resume = hyprctl dispatch dpms on
 }
 
 listener {
   timeout = 150
-  on_timeout = hyprctl dispatch dpms off
-  on_resume = hyprctl dispatch dpms on
-}
-
-listener {
-  timeout = 1000
-  on_timeout = hyprlock
-}
-
-listener {
-  timeout = 7200
-  on_timeout = systemctl suspend
+	on-timeout = systemctl suspend-then-hibernate
+  on-resume = $HOME/.local/bin/public/wallpaper/refresh-current-wallpapers
 }
