--- a/home/.config/hypr/hyprland.conf
+++ b/home/.config/hypr/hyprland.conf
@@ -49,7 +49,13 @@ input {
 
   touchpad {
     natural_scroll = true
+    tap-to-click = true
   }
+}
+
+gestures {
+  gesture = 3, horizontal, workspace
+  # gesture = 3, up, exec, hyprctl dispatch hyprspace:toggle
 }
 
 # Example per-device config
@@ -59,7 +65,6 @@ input {
 #   name = epic-mouse-v1
 #   sensitivity = -0.5
 # }
-
 
 decoration { # https://wiki.hyprland.org/Configuring/Variables/#decoration
   rounding = 4
@@ -101,7 +106,7 @@ decoration { # https://wiki.hyprland.org/Configuring/Variables/#decoration
     xray = true
     special = true
     popups = true
-}
+  }
 }
 
 animations { # https://wiki.hyprland.org/Configuring/Variables/#animations
