--- a/home/.config/tmux/tmux.conf
+++ b/home/.config/tmux/tmux.conf
@@ -56,12 +56,17 @@ bind -T copy-mode-vi C-q send-keys -X rectangle-toggle
 bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'wl-copy'
 # bind -T copy-mode-vi enter send-keys -X copy-pipe-and-cancel 'wl-copy'
 
+# Attempt to fix power off functionality
+# set -g destroy-unattached on
+set -s exit-empty on
+
 set -g status-right '#(git -C "#{pane_current_path}" branch --show-current 2>/dev/null | sed "s/.*/  & /")'
 
 set -g status-interval 5
 
 set -g status-position top
 
+set -g status-left " 󰊠 #S"
 set -g window-style "fg=#{@foreground},bg=#{@background}"
 set -g status-style "fg=#{@foreground},bg=#{@base00}"
 set -g window-status-style "fg=#{@foreground},bold"
@@ -71,3 +76,4 @@ set -g pane-active-border-style "fg=#{@cursor}"
 
 set-option -g history-limit 50000
 bind-key v capture-pane -b temp -S - \; save-buffer -b temp /tmp/tmux-buffer \; new-window "nvim +$ /tmp/tmux-buffer" \; delete-buffer -b temp
+
