link proper hypridle config for every devise

--- a/home/.config/hypr/generated_by_scripts/workspaces_per_monitor.conf
+++ b/home/.config/hypr/generated_by_scripts/workspaces_per_monitor.conf
@@ -1,14 +1,18 @@
-workspace = 1, monitor:HDMI-A-1,  persistent:true
-workspace = 2, monitor:HDMI-A-1,  persistent:true
-workspace = 3, monitor:HDMI-A-1,  persistent:true
-workspace = 4, monitor:HDMI-A-1,  persistent:true
-workspace = 5, monitor:HDMI-A-1,  persistent:true
-workspace = 6, monitor:HDMI-A-1,  persistent:true
-workspace = 7, monitor:HDMI-A-1,  persistent:true
+workspace = 1, monitor:HDMI-A-1, persistent:true
+workspace = 2, monitor:HDMI-A-1, persistent:true
+workspace = 3, monitor:HDMI-A-1, persistent:true
+workspace = 4, monitor:HDMI-A-1, persistent:true
+workspace = 5, monitor:HDMI-A-1, persistent:true
+workspace = 6, monitor:HDMI-A-1, persistent:true
+workspace = 7, monitor:HDMI-A-1, persistent:true
 
-workspace = 8, monitor:DP-1,      persistent:true, gapsin:20, gapsout:40
-workspace = 9, monitor:DP-1,      persistent:true, gapsin:20, gapsout:40
-workspace = 10,monitor:DP-1,      persistent:true, gapsin:20, gapsout:40
+workspace = 8, monitor:eDP-1, persistent:true, gapsin:6, gapsout:17
+workspace = 9, monitor:eDP-1, persistent:true, gapsin:6, gapsout:17
+workspace = 10,monitor:eDP-1, persistent:true, gapsin:6, gapsout:17
+
+workspace = 8, monitor:DP-1, persistent:true, gapsin:20, gapsout:40
+workspace = 9, monitor:DP-1, persistent:true, gapsin:20, gapsout:40
+workspace = 10,monitor:DP-1, persistent:true, gapsin:20, gapsout:40
 
 windowrulev2 = bordercolor rgba(33c4ffff) rgba(404040aa), onworkspace:8
 windowrulev2 = bordercolor rgba(33c4ffff) rgba(404040aa), onworkspace:9
