--- a/home/.config/hypr/modules/autostart.conf
+++ b/home/.config/hypr/modules/autostart.conf
@@ -1,5 +1,5 @@
 # exec-once = systemctl --user start hyprpolkitagent
-# exec-once = systemctl --user start hypridle
+exec-once = $USER_SCRIPTS_PATH/hyprland/hypridle-wrapper
 
 exec-once = dunst
 exec-once = /run/current-system/sw/libexec/polkit-kde-authentication-agent-1
