--- a/home/.config/hypr/modules/binds.conf
+++ b/home/.config/hypr/modules/binds.conf
@@ -19,6 +19,7 @@ bind  = SUPER SHIFT, bracketLeft,  exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 3
 bind  = SUPER SHIFT, bracketRight, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 3%+
 bind  = SUPER SHIFT, l,            exec, hyprlock
 
+# bindl =,switch:on:Lid Switch, exec, bash -c "hyprlock & sleep 0.5 && systemctl suspend-then-hibernate"
 
 bindl = , F1,  exec, $USER_SCRIPTS_PATH/hardware/set-monitor-brightness down 3
 bindl = , F2,  exec, $USER_SCRIPTS_PATH/hardware/set-monitor-brightness up 3
