remove media for now

--- a/home/.config/hypr/modules/autostart.conf
+++ b/home/.config/hypr/modules/autostart.conf
@@ -27,7 +27,7 @@ exec-once = wl-paste --type image --watch cliphist store # Stores only image dat
 # echo $ZDOTDIR
 # echo $ZDOTDIR/.zshrc
 # if not zsh env ~/.config/zsh/zshrc is not loaded
-exec-once = [workspace 1 silent] firefox -P work
+# exec-once = [workspace 1 silent] firefox -P work
 exec-once = [workspace 2 silent] kitty --class main zsh -lic 'tmux attach-session -t local; exec zsh'
 exec-once = [workspace 3 silent] kitty --class obsidian zsh -lic 'tmux attach-session -t obsidian; exec zsh'
 exec-once = [workspace 4 silent] kitty --class obsidian zsh -lic 'tmux attach-session -t todo; exec zsh'
@@ -36,5 +36,5 @@ exec-once = [workspace 5 silent] uwsm app -- dolphin
 # exec-once = [workspace 4 silent] thunderbird
 # exec-once = [workspace 8 silent] pavucontrol
 # exec-once = [workspace 8 silent] blueman-manager
-exec-once = [workspace 10 silent] uwsm app -- firefox -P media
+# exec-once = [workspace 10 silent] uwsm app -- firefox -P media
 exec-once = [workspace 10 silent] firefox -P default
