replace dunst with swaybg, improve borders for hyprland

--- a/home/.config/hypr/modules/binds.conf
+++ b/home/.config/hypr/modules/binds.conf
@@ -4,25 +4,28 @@
 bind = SUPER, Return,   exec, kitty
 bind = SUPER, S,        exec, hyprshot -zm region -o $HOME/Pictures/screenshots
 bind = SUPER, E,        exec, dolphin
-bind = SUPER, D,        exec, $USER_SCRIPTS_PATH/menu/launch-kitty applications
-bind = SUPER, P,        exec, $USER_SCRIPTS_PATH/menu/launch-kitty
+bind = SUPER, D,        exec, $HOME/.local/bin/public/menu/launch-kitty applications
+bind = SUPER, P,        exec, $HOME/.local/bin/public/menu/launch-kitty
 
 # System
-bind = SUPER SHIFT, I,     exec, $USER_SCRIPTS_PATH/wallpaper/picker-menu
+bind = SUPER SHIFT, I,     exec, $HOME/.local/bin/public/wallpaper/picker-menu
 bind = SUPER, SPACE,       exec, bash -c 'hyprctl switchxkblayout keyb next; pkill -RTMIN+6 waybar'
-bind = SUPER, MINUS,       exec, $USER_SCRIPTS_PATH/wallpaper/set-ink
+bind = SUPER, MINUS,       exec, $HOME/.local/bin/public/wallpaper/set-ink
 
-bind  = SUPER SHIFT, backslash,    exec, uwsm app -- $USER_SCRIPTS_PATH/bluetooth-connect-xm6
-bindl = SUPER SHIFT, b,            exec, $USER_SCRIPTS_PATH/hardware/set-keyboard-backlight
+bind  = SUPER SHIFT, backslash,    exec, uwsm app -- $HOME/.local/bin/public/bluetooth-connect-xm6
+bindl = SUPER SHIFT, b,            exec, $HOME/.local/bin/public/hardware/set-keyboard-backlight
 bind  = SUPER SHIFT, slash,        exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
 bind  = SUPER SHIFT, bracketLeft,  exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 3%-
 bind  = SUPER SHIFT, bracketRight, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 3%+
 bind  = SUPER SHIFT, l,            exec, hyprlock
+bind  = SUPER SHIFT, N, exec, swaync-client -t -sw
+bind  = SUPER SHIFT, D, exec, swaync-client -d -sw
+bind  = SUPER SHIFT, S, exec, kitty --start-as=fullscreen --title btop sh -c 'btop'
 
 # bindl =,switch:on:Lid Switch, exec, bash -c "hyprlock & sleep 0.5 && systemctl suspend-then-hibernate"
 
-bindl = , F1,  exec, $USER_SCRIPTS_PATH/hardware/set-monitor-brightness down 3
-bindl = , F2,  exec, $USER_SCRIPTS_PATH/hardware/set-monitor-brightness up 3
+bindl = , F1,  exec, $HOME/.local/bin/public/hardware/set-monitor-brightness down 3
+bindl = , F2,  exec, $HOME/.local/bin/public/hardware/set-monitor-brightness up 3
 bindl = , F5,  exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
 bindl = , F6,  exec, hyprlock
 bindl = , F7,  exec, playerctl previous
@@ -57,10 +60,10 @@ bind = SUPER, A, togglespecialworkspace, magic
 # Navigation
 bind = SUPER, grave, workspace, previous
 
-bind = SUPER, H, exec, $USER_SCRIPTS_PATH/hyprland/focus-tiled
-bind = SUPER, L, exec, $USER_SCRIPTS_PATH/hyprland/focus-tiled
-bind = SUPER, K, exec, $USER_SCRIPTS_PATH/hyprland/focus-tiled
-bind = SUPER, J, exec, $USER_SCRIPTS_PATH/hyprland/focus-tiled
+bind = SUPER, H, exec, $HOME/.local/bin/public/hyprland/focus-tiled
+bind = SUPER, L, exec, $HOME/.local/bin/public/hyprland/focus-tiled
+bind = SUPER, K, exec, $HOME/.local/bin/public/hyprland/focus-tiled
+bind = SUPER, J, exec, $HOME/.local/bin/public/hyprland/focus-tiled
 
 bind = SUPER, H, movefocus, l
 bind = SUPER, L, movefocus, r
@@ -68,8 +71,8 @@ bind = SUPER, K, movefocus, u
 bind = SUPER, J, movefocus, d
 
 # bind = SUPER, Tab, bringactivetotop  # Bring it to the top
-bind = SUPER, Tab,       exec, $USER_SCRIPTS_PATH/hyprland/cycle-float-windows
-bind = SUPER SHIFT, Tab, exec, $USER_SCRIPTS_PATH/hyprland/cycle-float-windows prev
+bind = SUPER, Tab,       exec, $HOME/.local/bin/public/hyprland/cycle-float-windows
+bind = SUPER SHIFT, Tab, exec, $HOME/.local/bin/public/hyprland/cycle-float-windows prev
 
 # Window operations
 bind = SUPER, F, fullscreen
