plugis and colors

--- a/home/.config/hypr/generated_by_scripts/workspaces_per_monitor.conf
+++ b/home/.config/hypr/generated_by_scripts/workspaces_per_monitor.conf
@@ -14,9 +14,9 @@ workspace = 8, monitor:DP-1, persistent:true, gapsin:20, gapsout:40
 workspace = 9, monitor:DP-1, persistent:true, gapsin:20, gapsout:40
 workspace = 10,monitor:DP-1, persistent:true, gapsin:20, gapsout:40
 
-windowrulev2 = bordercolor rgba(33c4ffff) rgba(404040aa), onworkspace:8
-windowrulev2 = bordercolor rgba(33c4ffff) rgba(404040aa), onworkspace:9
-windowrulev2 = bordercolor rgba(33c4ffff) rgba(404040aa), onworkspace:10
+# windowrulev2 = bordercolor rgba(33c4ffff) rgba(404040aa), onworkspace:8
+# windowrulev2 = bordercolor rgba(33c4ffff) rgba(404040aa), onworkspace:9
+# windowrulev2 = bordercolor rgba(33c4ffff) rgba(404040aa), onworkspace:10
 
 # Assign to monitor
 # workspace = 1, monitor:HDMI-A-1, persistent:true
