--- a/home/.config/hypr/hyprland.conf
+++ b/home/.config/hypr/hyprland.conf
@@ -2,10 +2,10 @@
 
 source = ~/.config/hypr/generated_by_scripts/workspaces_per_monitor.conf
 
-source = ~/.cache/wal/colors-hyprland.conf
+source = ~/.cache/wal/colors-hyprland-borders.conf
 
 source = ~/.config/hypr/plugins/darkwindow.conf
-source = ~/.config/hypr/plugins/hyprspace.conf
+# source = ~/.config/hypr/plugins/hyprspace.conf
 source = ~/.config/hypr/plugins/hyprbars.conf
 
 source = ~/.config/hypr/modules/binds.conf
@@ -23,6 +23,12 @@ general { # https://wiki.hyprland.org/Configuring/Variables/#general
   # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
   col.active_border = rgba(03fcfcaa)
   col.inactive_border = rgba(595959aa)
+
+  # col.active_border = rgba(0xff${border_active2}) rgba(0xff${border_active1}) 45deg
+  # col.inactive_border = rgba(0xff${border_inactive})
+  col.active_border = $border_active1 $border_active2 45deg
+  col.inactive_border = $border_inactive
+
 
   # Set to true enable resizing windows by clicking and dragging on borders and gaps
   resize_on_border = true
@@ -54,6 +60,8 @@ input {
 }
 
 gestures {
+  # gesture = 3, horizontal, workspace
+  # gesture = 3, up, exec, hyprctl dispatch overview:toggle
   gesture = 3, horizontal, workspace
   # gesture = 3, up, exec, hyprctl dispatch hyprspace:toggle
 }
