--- a/home/.config/hypr/modules/autostart.conf
+++ b/home/.config/hypr/modules/autostart.conf
@@ -1,6 +1,7 @@
 # exec-once = systemctl --user start hyprpolkitagent
 exec-once = $USER_SCRIPTS_PATH/hyprland/hypridle-wrapper
 
+# exec-once = libinput-gestures
 exec-once = /run/current-system/sw/libexec/polkit-kde-authentication-agent-1
 exec-once = pkill -x swww-daemon; swww-daemon & disown
 exec-once = kbuildsycoca6 # dolphin file association
