--- a/home/.config/hypr/plugins/darkwindow.conf
+++ b/home/.config/hypr/plugins/darkwindow.conf
@@ -1,4 +1,4 @@
-plugin = $HOME/.local/share/hypr-plugins/Hypr-DarkWindow.so
+exec-once = hyprctl plugin load $HOME/.local/share/hypr-plugins/Hypr-DarkWindow.so
 
 # hyprctl plugin load ~/.local/share/hypr-plugins/Hypr-DarkWindow.so
 
