--- a/home/.config/hypr/plugins/hyprbars.conf
+++ b/home/.config/hypr/plugins/hyprbars.conf
@@ -1,16 +1,24 @@
+exec-once = hyprctl plugin load /home/wh1le/.local/share/hypr-plugins/hyprbars.so
+
+source = ~/.cache/wal/colors-hyprland-borders.conf
+
 plugin {
-    hyprbars {
-        # example config
-        bar_height = 20
+  hyprbars {
+    bar_height = 25
+    on_double_click = hyprctl dispatch fullscreen 1
+    bar_color = rgb(1e1e1e)
+    col.text = $foreground
+    bar_text_size = 12
+    bar_text_font = Iosevka Nerd Font Mono Bold
+    bar_button_padding = 7
+    bar_padding = 10
+    bar_precedence_over_border = true
+    bar_buttons_alignment = left
 
-        # example buttons (R -> L)
-        # hyprbars-button = color, size, on-click
-        hyprbars-button = rgb(ff4040), 10, 󰖭, hyprctl dispatch killactive
-        hyprbars-button = rgb(eeee11), 10, , hyprctl dispatch fullscreen 1
-
-        # cmd to run on double click of the bar
-        on_double_click = hyprctl dispatch fullscreen 1
-    }
+    hyprbars-button = $color1, 15, 󰅖, hyprctl dispatch killactive
+    hyprbars-button = $color2, 15, 󰊓, hyprctl dispatch fullscreen 2
+    hyprbars-button = $color3, 15, 󰖯, hyprctl dispatch togglefloating
+  }
 }
 
 windowrule = plugin:hyprbars:nobar, floating:0
