--- a/home/.config/hypr/plugins/hyprspace.conf
+++ b/home/.config/hypr/plugins/hyprspace.conf
@@ -1,1 +1,1 @@
-plugin = $HOME/.local/share/hypr-plugins/Hyprspace.so
+exec-once = hyprctl plugin load  /home/wh1le/.local/share/hypr-plugins/Hyprspace.so
