--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "home/.config/zsh/zsh-autosuggestions"]
 	path = home/.config/zsh/zsh-autosuggestions
 	url = https://github.com/zsh-users/zsh-autosuggestions
+[submodule "home/.config/zsh/base16-shell"]
+	path = home/.config/zsh/base16-shell
+	url = https://github.com/chriskempson/base16-shell
