update window rules, binds, gaps

--- a/home/.config/hypr/modules/autostart.conf
+++ b/home/.config/hypr/modules/autostart.conf
@@ -2,10 +2,16 @@
 # exec-once = /run/current-system/sw/libexec/polkit-kde-authentication-agent-1
 exec-once = systemctl --user start hyprpolkitagent
 exec-once = hyprsunset
+
+# save some battery
+
 exec-once = $HOME/.local/bin/public/color-mode/dark-mode skip-notification
+exec-once = $HOME/.local/bin/public/battery-status
+exec-once = $HOME/.local/bin/public/kitty-background-listener
+exec-once = $HOME/.local/bin/public/hardware/mount-drives
 
 # Lock
-exec = $HOME/.local/bin/public/hyprland/hypridle-wrapper
+exec-once = $HOME/.local/bin/public/hyprland/hypridle-wrapper
 
 # Disabled
 # exec-once = libinput-gestures
@@ -16,8 +22,6 @@ exec-once = kanshi reload
 exec = $HOME/.local/bin/public/hyprland/set-keyboard-layout
 exec = $HOME/.local/bin/public/hyprland/set-thinkpad-settings
 exec = $HOME/.local/bin/public/hyprland/set-host-settings
-exec-once = $HOME/.local/bin/public/kitty-background-listener
-exec-once = $HOME/.local/bin/public/hardware/mount-drives
 
 # Dolphin file association
 exec-once = kbuildsycoca6
@@ -36,6 +40,7 @@ exec-once = $HOME/.config/waybar/live-reload
 exec-once = [workspace 1 silent] uwsm app -- firefox -P default --name  firefox-main
 exec-once = [workspace 2 silent] uwsm app -- kitty --class main zsh -lic 'tmux attach-session -t local; exec zsh'
 exec-once = [workspace 3 silent] obsidian
+exec-once = [workspace 4 silent] rmpc
 exec-once = [workspace 5 silent] uwsm app -- dolphin
 
 # exec = [workspace 5 silent] $HOME/.local/bin/public/hyprland/autostart/music
