--- a/home/.config/hypr/modules/binds.conf
+++ b/home/.config/hypr/modules/binds.conf
@@ -10,6 +10,7 @@ bind = SUPER, P,        exec, $HOME/.local/bin/public/menu/launch-kitty
 # System
 bind = SUPER SHIFT, I,     exec, $HOME/.local/bin/public/wallpaper/picker-menu
 bind = SUPER, SPACE,       exec, bash -c 'hyprctl switchxkblayout keyb next; pkill -RTMIN+6 waybar'
+# Example keybind in hyprland.conf
 bind = SUPER, MINUS,       exec, $HOME/.local/bin/public/wallpaper/set-ink
 
 bind  = SUPER SHIFT, backslash,    exec, uwsm app -- $HOME/.local/bin/public/bluetooth-connect-xm6
