--- a/home/.config/hypr/modules/windowrules.conf
+++ b/home/.config/hypr/modules/windowrules.conf
@@ -109,6 +109,7 @@ windowrulev2 = float,class:^(org.kde.dolphin)$,title:^(Copying|Moving|Deleting|.
 windowrulev2 = tile, class:(.*obsidian.*)
 windowrulev2 = tile, class:(.*kitty.*)
 windowrulev2 = tile, class:(.*main.*) # kitty
+windowrulev2 = tile, class:(.*qutebrowser.*) # kitty
 
 # Attempt to fix conky blur
 # windowrulev2 = opacity 1.0 override 1.0 override, class:^(kitty)$
@@ -124,3 +125,8 @@ windowrulev2 = tile, class:(.*main.*) # kitty
 # windowrulev2 = float, class:^(kitty-viu)$
 
 workspace = 4, persistent:true
+
+windowrulev2 = idleinhibit focus, class:^(mpv)$
+windowrulev2 = idleinhibit focus, class:^(zoom)$
+windowrulev2 = idleinhibit focus, title:^.*Meet.*$
+windowrulev2 = idleinhibit focus, title:^.*YouTube.*$
