--- a/home/.config/hypr/hyprland.conf
+++ b/home/.config/hypr/hyprland.conf
@@ -14,8 +14,8 @@ source = ~/.config/hypr/modules/autostart.conf
 env = XDG_CURRENT_DESKTOP,Hyprland
 
 general { # https://wiki.hyprland.org/Configuring/Variables/#general
-  gaps_in = 6
-  gaps_out = 17
+  gaps_in = 10
+  gaps_out = 10
 
   border_size = 4
 
@@ -74,39 +74,28 @@ gestures {
 # }
 
 decoration { # https://wiki.hyprland.org/Configuring/Variables/#decoration
-  rounding = 4
+  rounding = 1
   rounding_power = 2
 
   # Change transparency of focused and unfocused windows
-  active_opacity = 0.85
-  inactive_opacity = 0.65
+  active_opacity = 0.95
+  inactive_opacity = 0.8
 
   dim_inactive = false
   dim_strength = 0.3
   dim_special = 0.8
 
   shadow {
-    enabled = true
+    enabled = false
     range = 3
     render_power = 1
     color = rgba(1a1a1aee)
   }
 
 
-  # blur { # https://wiki.hyprland.org/Configuring/Variables/#blur
-  #   enabled = true
-  #   size = 8
-  #   passes = 2
-  #   ignore_opacity = true
-  #   new_optimizations = true
-  #   special = true
-  #   popups = true
-  #   xray = true
-  #   # vibrancy = 0.1696
-  # }
   blur {
     enabled = true
-    size = 8
+    size = 10
     passes = 2
     ignore_opacity = true
     new_optimizations = true
@@ -117,7 +106,8 @@ decoration { # https://wiki.hyprland.org/Configuring/Variables/#decoration
 }
 
 animations { # https://wiki.hyprland.org/Configuring/Variables/#animations
-  enabled = yes, please :)
+  # enabled = yes, please :)
+  enabled = no
 
   # Default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
   bezier = easeOutQuint,0.23,1,0.32,1
@@ -175,3 +165,6 @@ xwayland {
   force_zero_scaling = false
   use_nearest_neighbor = false
 }
+
+layerrule = blur, waybar
+layerrule = ignorezero, waybar
