disable cursor blinking

--- a/home/.config/kitty/kitty.conf
+++ b/home/.config/kitty/kitty.conf
@@ -143,6 +143,9 @@ action launch --type=overlay mpv $FILE_PATH
 
 include /home/wh1le/.cache/wal/colors-kitty.conf
 
+# cpu optimization
+cursor_blink_interval 0
+
 # image_protocol transfer_mode file
 # graphics_protocol kitty
 
